add_library(systems run_systems.cpp keydamper.cpp mouse.cpp)
add_subdirectory(ai)
add_subdirectory(damage)
add_subdirectory(gui)
add_subdirectory(helpers)
add_subdirectory(io)
add_subdirectory(overworld)
add_subdirectory(physics)
add_subdirectory(power)
add_subdirectory(scheduler)
target_link_libraries(systems ai damage gui helpers io overworld scheduler power physics globalassets)
cotire(systems)
