add_library(damage
        creature_attacks_system.cpp
        damage_system.cpp
        healing_system.cpp
        kill_system.cpp
        sentient_attacks_system.cpp
        settler_melee_attacks_system.cpp
        settler_ranged_attack_system.cpp
        turret_ranged_attack_system.cpp
        )
#cotire(systems)
